--- a/week4/index.html
+++ b/week4/index.html
@@ -99,5 +99,24 @@
             
         </form>
     </section>
+    <section>
+        <h2>My Cat Tuukka</h2>
+        <img src="images/tuukkapic.JPG" alt="Tuukka">
+    </section>
+    <nav>
+        <h2>My Hobbies</h2>
+        <ul>
+            <li>Music: This is my favourite hobby, I love music, I listen to it 24/7.  I collect vinyls
+                of my favourite artists like Björk, Lana Del Rey and Playboi Carti.
+            </li>
+            <li>Video Games: My favourite video games include Minecraft and Fortnite.  I used to 
+                to be super addicted to Fortnite but since then I have moved on thankfully.
+            </li>
+        </ul>
+    </nav>
+    <nav>
+            <a href="Notes.html">Notes</a>
+    </nav>
+
 </body>
 </html>
