--- a/week4/index.html
+++ b/week4/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Week 4 Demo</title>
 </head>
 <body>
+    <header>Welcome to my website</header>
     <section>
         <h2>My Cat Tuukka</h2>
         <img src="images/tuukkapic.JPG" alt="Tuukka">
@@ -25,6 +27,8 @@
     <nav>
             <a href="Notes.html">Notes</a>
     </nav>
-
+<footer>
+    Thank you for visiting my website
+</footer>
 </body>
 </html>
