--- a/week4/index.html
+++ b/week4/index.html
@@ -8,10 +8,10 @@
     <title>Week 4 Demo</title>
 </head>
 <body>
-    <header>Welcome to my website</header>
+    <header class="site-title">Welcome to my website</header>
     <section>
         <h2>My Cat Tuukka</h2>
-        <img src="images/tuukkapic.JPG" alt="Tuukka">
+        <img id="my-image" src="images/tuukkapic.JPG" alt="Tuukka">
     </section>
     <nav>
         <h2>My Hobbies</h2>
