--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -16,8 +16,8 @@
     <nav>
         <h2>My Hobbies</h2>
         <ul class="mydiv">
-            <li><mark>Music: This is my favourite hobby, I love music, I listen to it 24/7.  I collect vinyls
-                of my favourite artists like Björk, Lana Del Rey and Playboi Carti.⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</mark>
+            <li>Music: This is my favourite hobby, I love music, I listen to it 24/7.  I collect vinyls
+                of my favourite artists like Björk, Lana Del Rey and Playboi Carti.
             </li>
             <li>Video Games: My favourite video games include Minecraft and Fortnite.  I used to 
                 to be super addicted to Fortnite but since then I have moved on thankfully.
