--- a/midterm/index.html
+++ b/midterm/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jenna1945 Midterm</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<div class="wrapper">
+    <div class="img-ctr">
+        <img id="my-image" src="images/chinomorenobanner.png" alt="Chino" class="center">
+        <h1>Chino Moreno</h1>
+    </div>
+    <div class="display">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Story</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+        
+    <div>
+        <h2>Biography</h2>
+    </div>
+    <div class="chino2">
+        <img id="secondimage" src="images/chinomorenoportrait.png" height="400" style="float: left">
+    </div>
+    <p class="paragraph"> Moreno was born in Sacramento, California, the second of five children. His mother is of Mexican 
+        and Chinese descent and his father is Mexican.[4] The nickname "Chino" is the Spanish-language term for Chinese people.  </p>
+    <p class="paragraph"></p>
+
     
+</div>
 </body>
 </html>
