--- a/final-project/index.html
+++ b/final-project/index.html
@@ -197,21 +197,19 @@
 
             <table>
                 <tr>
-                    <th>Company</th>
-                    <th>Contact</th>
-                    <th>Country</th>
+                    <td>Days</td>
+                    <td>Hours</td>
                 </tr>
                 <tr>
-                    <td>Alfreds Futterkiste</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
+                    <td>Monday-Friday</td>
+                    <td>9am-6pm</td>
                 </tr>
                 <tr>
-                    <td>Centro comercial Moctezuma</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td>Saturday-Sunday</td>
+                    <td>Closed</td>
                 </tr>
             </table>
+                
         </div>
 
         <!-- footer used for the copyright and sources -->
