--- a/final-project/index.html
+++ b/final-project/index.html
@@ -32,8 +32,7 @@
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Team</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><textarea class="txtbox" rows="1"></textarea></li>
-                        <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                        <li><textarea class="txtbox" rows="1"></textarea><i class="fa-solid fa-magnifying-glass"></i></li>
                     </ul>
                 </nav>
             </header>
