--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final</title>
     <script src="https://kit.fontawesome.com/2947689a8a.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -40,6 +43,7 @@
                 <!-- Section with a class of welcome for the grey box behind the h1 and subtext
                 applies to each appropriate element -->
                 <section class="welcome">
+
                     <h1>Welcome to Three Star Media</h1>
 
                     <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam rerum voluptas
@@ -55,16 +59,18 @@
 
         <!-- Section class of wrapper3 to apply background colour to about us and subheading -->
         <section class="wrapper3">
+            <img src="images/about-us.jpg" class="pingpong" alt="About U">
             <h2>About Us</h2>
-
+            <div class="aboutusbox">
             <p class="p2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero unde repellendus
                 exercitationem
                 asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe
-                sint praesentium laboriosam perferendis eius amet ad?
+                sint praesentium laboriosam perferendis eius amet ad?</p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, velit ipsam? Atque accusamus,
+                <p class="pv2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, velit ipsam? Atque accusamus,
                 excepturi corrupti sunt reiciendis soluta quo commodi quidem, non perferendis vel sed facilis
                 rerum cum in exercitationem?</p>
+            </div>
         </section>
 
         <!-- section for gallery grid which contains each 5 photos plus subtitles and buttons -->
